--- a/ramdisk/init.rc
+++ b/ramdisk/init.rc
@@ -664,6 +664,11 @@ service mdnsd /system/bin/mdnsd
     disabled
     oneshot
 
+service pre-recovery /system/bin/uncrypt
+    class main
+    disabled
+    oneshot
+
 service whtest /system/bin/whtest.sh
     disabled
     oneshot
